# SoftRenderer

./: .gitignore  README.md  meson.build
include/: cgl.hpp
include/cgl/: camera.hpp  color.hpp  const.hpp  math.hpp  pixelbuffer.hpp  rasterize.hpp  sdl.hpp  timer.hpp  viewport.hpp
include/cgl/math/: angle.hpp  angle2.hpp  const.hpp  rotationmatrix.hpp  triangle.hpp  vector.hpp  vector2i.hpp
include/cgl/sdl/: app.hpp  renderer.hpp
src/: main.cpp  meson.build
src/cgl/: camera.cpp  color.cpp  meson.build  pixelbuffer.cpp  rasterize.cpp  timer.cpp  viewport.cpp
src/cgl/math/: angle.cpp  angle2.cpp  rotationmatrix.cpp  vector.cpp  vector2i.cpp
src/cgl/sdl/: app.cpp  renderer.cpp
